Add require: sabre/dav

--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,7 @@
             "email": "sig@signote.cc"
         }
     ],
-    "require": {}
+    "require": {
+        "sabre/dav": "^4.4"
+    }
 }
