--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,11 @@ charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 
+[*.php]
+indent_style = space
+indent_size = 4
+trim_trailing_whitespace = true
+
 [composer.json]
 indent_style = space
 indent_size = 4
